fixed comment icon not showing on mobile

--- a/react-app/src/components/AllImages/AllImages.css
+++ b/react-app/src/components/AllImages/AllImages.css
@@ -113,7 +113,7 @@
 .likes-bar {
   display: flex;
   flex-direction: row;
-  font-size: 20px;
+  font-size: 18px;
   align-items: center;
 }
 
@@ -121,7 +121,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  box-shadow: rgba(0, 0, 0, 0.219) 2px 6px 14px 2px;
+  /* box-shadow: rgba(0, 0, 0, 0.219) 2px 6px 14px 2px; */
   border-radius: 4px;
 }
 .image-ol-likes {
@@ -151,5 +151,18 @@
   .images-container {
     padding-left: 0;
     padding-right: 0;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .images-container {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .all-image-name {
+    width: 50%;
+  }
+  .image-ol-likes {
+    width: 50%;
   }
 }
